force-app/main/default/objects/FieldWorkerClientRelation__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Client</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.ContactType__c</field>
            <operation>equals</operation>
            <value>Survey Client</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Field Worker Relationships</relationshipLabel>
    <relationshipName>FieldWorkerRelationships</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>