force-app/main/default/objects/FieldWorkerClientRelation__c/fields/FieldWorker__c.field-meta.xml
<CustomField>
    <fullName>FieldWorker__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Field Worker</label>
    <lookupFilter>
      <active>true</active>
      <filterItems>
          <field>Contact.ContactType__c</field>
          <operation>equals</operation>
          <value>Field Worker</value>
      </filterItems>
      <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Client Relationships</relationshipLabel>
    <relationshipName>ClientRelationships</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>