force-app/main/default/objects/FieldWorkerClientRelation__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Represents the relationship type between field worker and survey client. You can customize the picklist values</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Relation 1</fullName>
            </value>
            <value>
                <fullName>Relation 2</fullName>
            </value>
            <value>
                <fullName>Relation 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>