force-app/main/default/objects/FieldWorkerClientRelation__c/validationRules/Field_Worker_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Field_Worker_Type</fullName>
    <active>true</active>
    <description>Restrict contact type for field worker field.</description>
    <errorConditionFormula>TEXT(FieldWorker__r.ContactType__c) &lt;&gt; &quot;Field Worker&quot;</errorConditionFormula>
    <errorDisplayField>FieldWorker__c</errorDisplayField>
    <errorMessage>You must specify &quot;Field Worker&quot; type contact for the Field Worker field.</errorMessage>
</ValidationRule>