force-app/main/default/objects/FieldWorkerClientRelation__c/validationRules/Survey_Client_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Survey_Client_Type</fullName>
    <active>true</active>
    <description>Restrict contact type for client field.</description>
    <errorConditionFormula>TEXT(Client__r.ContactType__c) &lt;&gt; &quot;Survey Client&quot;</errorConditionFormula>
    <errorDisplayField>Client__c</errorDisplayField>
    <errorMessage>You must specify &quot;Survey Client&quot; type contact for the Survey Client field.</errorMessage>
</ValidationRule>